small change to assignment 3

--- a/assignment03.ipynb
+++ b/assignment03.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16ac70f7850>"
+       "<matplotlib.image.AxesImage at 0x1a17fec4c10>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16acc657910>"
+       "<matplotlib.image.AxesImage at 0x1a1665b1b10>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16acc690cd0>"
+       "<matplotlib.image.AxesImage at 0x1a1665b1610>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16accb526d0>"
+       "<matplotlib.image.AxesImage at 0x1a10d1cabd0>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,23 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(36, 358), (40, 353), (38, 354), (39, 352), (38, 358), (39, 351), (35, 356), (39, 356), (37, 355), (37, 351)]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16adcf20250>"
+       "<matplotlib.image.AxesImage at 0x1a10ea74290>"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -292,7 +285,7 @@
     "    reverse=True\n",
     ")[:k]\n",
     "\n",
-    "print(strongest_lines)\n",
+    "# print(strongest_lines)\n",
     "\n",
     "for a, r in strongest_lines:\n",
     "    result = draw_line_hessian_normal(result, a, r)\n",
@@ -315,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +317,7 @@
        "Ellipsis"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,16 +338,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16accbd3b50>"
+       "<matplotlib.image.AxesImage at 0x1a10ddd5490>"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -393,16 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16ad4cd9790>"
+       "<matplotlib.image.AxesImage at 0x1a10ddb3c10>"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -479,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
