--- a/assignment06.ipynb
+++ b/assignment06.ipynb
@@ -74,18 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the data\n",
-    "\n",
     "# Get TinyFace using for example gdown\n",
     "# !pip install gdown\n",
-    "# !mkdir data\n",
-    "# !cd data\n",
     "# !gdown 1xTZc7lNmWN33ECO2AKH6FycGdiqIK7W0\n",
     "# !unzip tinyface.zip\n",
     "\n",
     "# TODO: Data Loading and simple preprocessing:\n",
     "# Prepare (some) TinyFace samples for face data and use CIFAR10 samples for non-face data\n",
-    "# suggested cropping/resizing to 16x16 + "
+    "# suggested cropping/resizing to 16x16 + grayscaling"
    ]
   },
   {
