--- a/assignment06.ipynb
+++ b/assignment06.ipynb
@@ -65,7 +65,7 @@
     "* Train a 20-feature classifier using these datasets:\n",
     "    - TinyFace for low resolution face images: https://qmul-tinyface.github.io/\n",
     "    - CIFAR10 for negative samples: https://www.cs.toronto.edu/~kriz/cifar.html\n",
-    "* Test your classifier and report the results for different thresholds **(RESULTS)**"
+    "* Test your classifier and report its performance in terms of error and accuracy **(RESULTS)**"
    ]
   },
   {
