Add assignment08 and fix typos

--- a/assignment06.ipynb
+++ b/assignment06.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ex. 6.1 Rectangular Features\n",
+    "### Task. 6.1 Rectangular Features\n",
     "\n",
     "* Implement the construction of all 2-rect features (horizontal and vertical) within a given window (like the 24x24 px window from the paper)\n",
     "* How many exist? **(RESULT)** \n",
