--- a/assignment07.ipynb
+++ b/assignment07.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ex. 7.1 XOR\n",
+    "### Task 7.1 XOR\n",
     "\n",
     "* Implement a two-layer artificial neural network with two input neurons and one output neuron. Choose the number of hidden neurons to your liking and add an error \"neuron\" to your network. \n",
     "* Our goal is to learn the XOR function. What does the network return for random weights of all combinations of (binary) inputs? **(RESULT)**"
