--- a/assignment09.ipynb
+++ b/assignment09.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# imports\n",
     "import torch.nn as nn\n",
-    "# ..."
+    "from torchvision.datasets import CocoDetection\n"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code here"
+    "ds = CocoDetection(root='images/coco', annFile='images/coco/annotations.json')"
    ]
   },
   {
@@ -117,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py12",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
